--- a/card.html
+++ b/card.html
@@ -3,6 +3,7 @@
 <head>
 	<title>IDENTITY CARD</title>
 	<link rel="stylesheet" type="text/css" href="css/ps.css">
+	<link rel="stylesheet" type="text/css" href="css/tomresume.css">
 </head>
 <body>
 	<h3 style="text-align: center"><b>Identity Card</b></h3>
