--- a/js/tomresume.html
+++ b/js/tomresume.html
@@ -1,16 +1,74 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	
+ 	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\css\tomresume.css">
+ 	<style>
+ 	table,th,td{
+ 		border:1px black;
+ 		border-collapse: collapse;
+ 	}
+ </style>
  </head>
+
  <body>
-		 <div>
-		 	<h1>Career Objective</h1>
-
-
-
-
-
-		 </div> 
+		 <div class="main">
+		 	<div class="left">
+		 		<img  src="C:\Users\SWETHA\Desktop\react-js\images\tom.jfif"alt="Tom">
+				<h1><b>Name:Tom</b></h1>
+				<h4>Cartoon Entertainer </h4>
+				<p class="email">Email:tom2898@gmail.com</p>
+				<p>contact:9878456532</p>
+				<p>Disney world</p>
+			 </div>
+		 	<div class="right">
+		 		<h1>Career Objective</h1>
+		 		<p>To work in an environment where i utilize my skills and knowledge</p>
+		 		<hr>
+		 		<h1>Educational Details</h1>
+		 		<table>
+		 			<tr>
+		 				<th>Sno</th>
+		 				<th>Institute</th>
+		 				<th>Course</th>
+		 				<th>Year of passing</th>
+		 				<th>%</th>
+		 			</tr>
+		 			<tr>
+		 				<td>1</td>
+		 				<td>Graphics University</td>
+		 				<td>Btech</td>
+		 				<td>2019</td>
+		 				<td>90</td>
+		 			</tr>
+		 			<tr>
+		 				<td>2</td>
+		 				<td>Cartoon Junior College</td>
+		 				<td>Inter</td>
+		 				<td>2015</td>
+		 				<td>92</td>
+		 			</tr>
+		 			<tr>
+		 				<td>3</td>
+		 				<td>CartoonNetwork School </td>
+		 				<td>SSC</td>
+		 				<td>2013</td>
+		 				<td>95</td>
+		 			</tr>
+		 		</table>
+		 		<h1>Skills</h1>
+		 		<ul>
+		 			<li>C</li>
+		 			<li>C++</li>
+		 			<li>HTML</li>
+		 			<li>CSS</li>
+		 			<li>Java Script</li>
+		 			<li>Java</li>
+		 		</ul>
+		 		<h1>Hobbies</h1>
+		 		<ol>
+		 			<li>Reading Books</li>
+		 			<li>Playing with jerry</li>
+			</div>
+		</div> 
  </body>
  </html>
