--- a/PROJECT1/js/card.html
+++ b/PROJECT1/js/card.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>IDENTITY CARD</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\css\card.css">
+	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\PROJECT1\css\card.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	
 	
@@ -11,19 +11,19 @@
 	<h3 style="text-align: center"><b>Identity Card</b></h3>
 <section class="card">
 	<div class="tomandjerry">
-	<img  src="C:\Users\SWETHA\Desktop\react-js\images\tom.jfif"alt="Tom">
+	<img  src="C:\Users\SWETHA\Desktop\react-js\PROJECT1\images\tom.jfif"alt="Tom">
 	<h1><b>Name:Tom</b></h1>
 	<p class="email">Email:tom2898@gmail.com</p>
 	<p>contact:9878456532</p>
-	<a href="C:\Users\SWETHA\Desktop\react-js\js\tomresume.html" target="_blank">Resume</a>
+	<a href="C:\Users\SWETHA\Desktop\react-js\PROJECT1\js\tomresume.html" target="_blank">Resume</a>
 	
 	</div>
 	<div class="tomandjerry">
-	<img src="C:\Users\SWETHA\Desktop\react-js\images\jerry.jfif" alt="jerry">
+	<img src="C:\Users\SWETHA\Desktop\react-js\PROJECT1\images\jerry.jfif" alt="jerry">
 	<h1><b>Name:Jerry</b></h1>
 	<p class="email">Email:jerry7501@gmail.com</p>
 	<p>contact:9878456532</p>
-	<a href="C:\Users\SWETHA\Desktop\react-js\js\jerryresume.html" target="_blank">Resume</a>
+	<a href="C:\Users\SWETHA\Desktop\react-js\PROJECT1\js\jerryresume.html" target="_blank">Resume</a>
 
 	</div>
 </section>
