--- a/PROJECT1/js/jerryresume.html
+++ b/PROJECT1/js/jerryresume.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\css\jerryresume.css">
+ 	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\PROJECT1\css\jerryresume.css">
  	<style>
  	table, th, td {
   			border: 1px solid black;
@@ -13,7 +13,7 @@
  <body>
 		 <div class="main">
 		 	<div class="left">
-		 		<img  src="C:\Users\SWETHA\Desktop\react-js\images\jerry.jfif"alt="Tom">
+		 		<img  src="C:\Users\SWETHA\Desktop\react-js\PROJECT1\images\jerry.jfif"alt="Tom">
 				<h1><b>Name:Jerry</b></h1>
 				<h4>Cartoon Entertainer </h4>
 				<p class="email">Email:jerry7501@gmail.com</p>
