--- a/PROJECT1/js/tomresume.html
+++ b/PROJECT1/js/tomresume.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\css\tomresume.css">
+ 	<link rel="stylesheet" type="text/css" href="C:\Users\SWETHA\Desktop\react-js\PROJECT1\css\tomresume.css">
  	<style>
  	table,th,td{
  		border:1px solid black;
@@ -13,7 +13,7 @@
  <body>
 		 <div class="main">
 		 	<div class="left">
-		 		<img  src="C:\Users\SWETHA\Desktop\react-js\images\tom.jfif"alt="Tom">
+		 		<img  src="C:\Users\SWETHA\Desktop\react-js\PROJECT1\images\tom.jfif"alt="Tom">
 				<h1><b>Name:Tom</b></h1>
 				<h4>Cartoon Entertainer </h4>
 				<p class="email">Email:tom2898@gmail.com</p>
